...
                android:text="Order Review"
                android:textAlignment="textEnd"
                android:textColor="@color/black"
                android:textSize="15sp" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_list"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/dimen_10dp"
                android:layout_marginTop="@dimen/dimen_10dp"
                tools:itemCount="1"
                tools:listitem="@layout/item_food" />
...
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    app:layout_constraintGuide_percent="0.55" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btn_order_ck"
                    style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/dimen_10dp"
                    android:layout_marginTop="@dimen/dimen_10dp"
                    android:text="Checkout"
...
