...
        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/container_summary"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_next"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dimen_10dp"
                android:layout_marginVertical="@dimen/dimen_10dp"
                android:layout_marginEnd="@dimen/dimen_5dp"
                app:cornerRadius="@dimen/dimen_10dp"
...
