...
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="@dimen/dimen_20dp"
                    android:layout_marginTop="@dimen/dimen_20dp"
                    android:layout_marginBottom="20dp">

                    <LinearLayout
                        android:id="@+id/menu_resto"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:orientation="vertical">

...
                            android:textAlignment="center"
                            android:textColor="@color/black" />

                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/menu_prayer"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:orientation="vertical">

...
