<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="10dp">


            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="20dp">

                <ImageButton
                    android:id="@+id/btn_back"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_centerInParent="true"
                    android:layout_marginEnd="20dp"
                    android:src="@drawable/ic_baseline_arrow_back_24"
                    android:background="@android:color/transparent"
                    app:tint="@color/blue_auth" />

                <TextView
                    android:id="@+id/label_page_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:layout_toEndOf="@id/btn_back"
                    android:fontFamily="@font/poppins_regular"
                    android:text="@string/title_order_status"
                    android:textColor="@color/black"
                    android:textSize="17sp" />

            </RelativeLayout>


            <TextView
                android:id="@+id/label_back"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:layout_toEndOf="@id/btn_back"
                android:fontFamily="@font/poppins_regular"
                android:text="@string/message_please_enter_your_credential_to_continue"
                android:textColor="@color/black"
                android:textSize="13sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/open_sans_semi_bold"
                android:text="@string/title_form_email"
                android:layout_marginTop="@dimen/dimen_20dp"
                android:textColor="@color/black"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/et_username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                android:fontFamily="@font/poppins_regular"
                android:hint="@string/form_hint_login_email"
                android:textColor="@color/black"
                />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/montserrat_bold"
                android:text="@string/form_title_password"
                android:textColor="@color/black"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/et_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins_regular"
                android:hint="@string/form_hint_input_password"
                android:inputType="textPassword"
                android:textColor="@color/black"
                />

            <TextView
                android:id="@+id/btn_reset_form"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                />

            <LinearLayout
                android:layout_marginTop="@dimen/dimen_20dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:layout_toEndOf="@id/btn_back"
                    android:fontFamily="@font/poppins_regular"
                    android:text="@string/message_don_t_have_an_account_yet"
                    android:textColor="@color/black"
                    android:textSize="13sp" />

                <TextView
                    android:id="@+id/btn_register"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:layout_toEndOf="@id/btn_back"
                    android:fontFamily="@font/poppins_regular"
                    android:text="@string/title_register_here"
                    android:textColor="@color/menu_bottom_active"
                    android:textSize="13sp" />
            </LinearLayout>


        </LinearLayout>

    </ScrollView>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/btn_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_margin="20dp"
        android:backgroundTint="@color/gray70"
        android:contentDescription="Button Add Report"
        android:src="@drawable/ic_baseline_keyboard_arrow_right_24"
        app:fabSize="normal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:tint="@color/white" />

    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/loading_anim"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:padding="50dp"
        android:visibility="gone"
        android:background="@android:color/transparent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:lottie_autoPlay="true"
        app:lottie_fileName="loading_circle_rgb.json"
        app:lottie_loop="true" />


</androidx.constraintlayout.widget.ConstraintLayout>