...
                        android:fontFamily="@font/open_sans_semi_bold"
                        android:text="@string/time_shubuh"
                        android:textColor="@color/black"
                        android:textSize="20sp" />

                    <ImageView
                        android:id="@+id/btn_next_date"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentEnd="true"
                        android:layout_centerInParent="true"
                        android:layout_marginEnd="@dimen/dimen_20dp"
                        android:src="@drawable/ic_musko_arrow_right" />

                    <ImageView
                        android:id="@+id/btn_before_date"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentStart="true"
                        android:layout_centerInParent="true"
                        android:layout_marginStart="@dimen/dimen_20dp"
                        android:src="@drawable/ic_musko_arrow_left" />
...
                            android:fontFamily="@font/open_sans_semi_bold"
                            android:text="@string/time_shubuh"
                            android:textColor="@color/black"
                            android:textSize="20sp" />

                        <TextView
                            android:id="@+id/tv_fajr_time"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignParentEnd="true"
                            android:layout_marginStart="@dimen/dimen_10dp"
                            android:layout_marginEnd="@dimen/dimen_30dp"
                            android:fontFamily="@font/open_sans_regular"
...
                            android:fontFamily="@font/open_sans_semi_bold"
                            android:text="@string/time_zuhr"
                            android:textColor="@color/black"
                            android:textSize="20sp" />

                        <TextView
                            android:id="@+id/tv_zuhr_time"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignParentEnd="true"
                            android:layout_marginStart="@dimen/dimen_10dp"
                            android:layout_marginEnd="@dimen/dimen_30dp"
                            android:fontFamily="@font/open_sans_regular"
...
                            android:fontFamily="@font/open_sans_semi_bold"
                            android:text="@string/time_asr"
                            android:textColor="@color/black"
                            android:textSize="20sp" />

                        <TextView
                            android:id="@+id/tv_asr_time"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignParentEnd="true"
                            android:layout_marginStart="@dimen/dimen_10dp"
                            android:layout_marginEnd="@dimen/dimen_30dp"
                            android:fontFamily="@font/open_sans_regular"
...
                            android:fontFamily="@font/open_sans_semi_bold"
                            android:text="@string/time_maghrib"
                            android:textColor="@color/black"
                            android:textSize="20sp" />

                        <TextView
                            android:id="@+id/tv_maghrib_time"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignParentEnd="true"
                            android:layout_marginStart="@dimen/dimen_10dp"
                            android:layout_marginEnd="@dimen/dimen_30dp"
                            android:fontFamily="@font/open_sans_regular"
...
